--- a/myauction/src/main/resources/templates/index.html
+++ b/myauction/src/main/resources/templates/index.html
@@ -54,7 +54,7 @@
                     <a th:href="@{/deleteAuction(auctionid=${auction.auctionid})}">删除</a>
                 </div>
                 <div th:if="${session.user.userisadmin==0}">
-                    <a href="#" title="竞拍" onclick="abc();">竞拍</a>
+                    <a th:href="@{/toDetail(auctionid=${auction.auctionid})}">竞拍</a>
                 </div>
             </li>
         </ul>
