完成了竞拍结果查询

--- a/myauction/src/main/resources/templates/addAuction.html
+++ b/myauction/src/main/resources/templates/addAuction.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>添加拍卖品</title>
+    <title>更新拍卖品</title>
     <link href="/css/common.css" rel="stylesheet" type="text/css" />
     <link href="/css/style.css" rel="stylesheet" type="text/css" />
     <script src="/js/WebCalendar.js" type="text/javascript"></script>
