--- a/myauction/src/main/resources/templates/updateAuction.html
+++ b/myauction/src/main/resources/templates/updateAuction.html
@@ -122,7 +122,7 @@
         </dd>
         <dd class="hegas">
           <input type="submit" value="保 存" class="spbg buttombg buttombgs buttomb f14 lf" />
-          <input type="reset" value="取 消" onclick="location='listAuction.action'" class="spbg buttombg buttombgs buttomb f14 lf" />
+          <input type="reset" value="取 消" onclick="location='/queryAuctions'" class="spbg buttombg buttombgs buttomb f14 lf" />
         </dd>
       </dl>
     </div>
